PROJECT (TIME_PASS)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_EXE_LINKER_FLAGS "-lrt")								#must add "-lrt" flag to reference "shm_open" and "unlink"
GET_FILENAME_COMPONENT(TIME_PASS_BASE ".." REALPATH)
#SET(CMAKE_INSTALL_PREFIX  ${TIME_PASS_BASE})
#SET (EXECUTABLE_OUTPUT_PATH ${TIME_PASS_BASE}/example/bin)

MESSAGE("TIME_PASS_BASE="${TIME_PASS_BASE})
INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/include)			#relative to current CMakeLists.txt

FIND_LIBRARY(GLOBAL NAMES global PATHS ${CMAKE_INSTALL_PREFIX}/lib)
FIND_LIBRARY(SHM NAMES shm PATHS ${CMAKE_INSTALL_PREFIX}/lib)

ADD_SUBDIRECTORY(array)
ADD_SUBDIRECTORY(list)
ADD_SUBDIRECTORY(queue)
ADD_SUBDIRECTORY(set)
ADD_SUBDIRECTORY(map)
ADD_SUBDIRECTORY(multiset)
ADD_SUBDIRECTORY(multimap)
ADD_SUBDIRECTORY(doublylist)
ADD_SUBDIRECTORY(hashset)
ADD_SUBDIRECTORY(hashmap)
ADD_SUBDIRECTORY(multihashset)
ADD_SUBDIRECTORY(multihashmap)
ADD_SUBDIRECTORY(hashlist)


