PROJECT (TIME_PASS)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET(CMAKE_BUILD_TYPE DEBUG)
GET_FILENAME_COMPONENT(TIME_PASS_BASE ".." REALPATH)
#SET(CMAKE_INSTALL_PREFIX  ${TIME_PASS_BASE})
SET(SHM_BASE ${TIME_PASS_BASE}/src/shm)
SET(GLOBAL_BASE ${TIME_PASS_BASE}/src/global)

ADD_SUBDIRECTORY(global)
ADD_SUBDIRECTORY(shm)
