INCLUDE_DIRECTORIES(${GLOBAL_BASE}/include)
AUX_SOURCE_DIRECTORY(${GLOBAL_BASE}/src GLOBAL_SRC)
FILE(GLOB GLOBAL_INCLUDE ${GLOBAL_BASE}/include/*)

ADD_LIBRARY(libglobal SHARED ${GLOBAL_SRC})
ADD_LIBRARY(global_static STATIC ${GLOBAL_SRC})

INSTALL(TARGETS libglobal LIBRARY DESTINATION  lib)
INSTALL(TARGETS global_static ARCHIVE DESTINATION  lib)
INSTALL(FILES ${GLOBAL_INCLUDE} DESTINATION  include/global)

SET_TARGET_PROPERTIES(libglobal PROPERTIES OUTPUT_NAME "global")
SET_TARGET_PROPERTIES(global_static PROPERTIES OUTPUT_NAME "global")


